--- a/RainInAustraliaBlazor/Pages/Evaluation.razor
+++ b/RainInAustraliaBlazor/Pages/Evaluation.razor
@@ -47,7 +47,7 @@
             <tr>
                 <th scope="row">@(testResults.IndexOf(testResult) + 1)</th>
                 <td>
-                    <RainInAustraliaBlazor.Components.Collapsable Collapsed="true">
+                    <RainInAustraliaBlazor.Shared.Collapsable Collapsed="true" Text="@testResult.Input.Location">
                         <ChildContent>
                             <b>@nameof(AussieWeatherInputTestDTO.Date):</b> @testResult.Input.Date.ToSampleString()<br />
                             <b>@nameof(AussieWeatherInputTestDTO.Location):</b> @testResult.Input.Location<br />
@@ -69,7 +69,7 @@
                             <b>@nameof(AussieWeatherInputTestDTO.RainToday):</b> @testResult.Input.RainToday<br />
                             <b>@nameof(AussieWeatherInputTestDTO.RainTomorrow):</b> @testResult.Input.RainTomorrow<br />
                         </ChildContent>
-                    </RainInAustraliaBlazor.Components.Collapsable>
+                    </RainInAustraliaBlazor.Shared.Collapsable>
                 </td>
                 <td>
                     @if (testResult.Prediction)
